welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:2: error: not found: value Min
	var maxi = Min.int
                   ^