welcome.lessons.welcome.array.maxvalue.MaxValue.scala.code
def maxValue(nums:Array[Int]): Int = {
	var maxi = Min.int
	for (i <- 0 to nums.length -1)
		{maxi = Math.max(maxi, nums(i))}
	maxi
}
